--- a/Statistics_refresher_aqm_2023_ex.ipynb
+++ b/Statistics_refresher_aqm_2023_ex.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMLzMzQbYWp0avAvRqK1bxP",
+      "authorship_tag": "ABX9TyNG+RxyquWiWg4MsrvN0WJy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,8 @@
         "# Part 1. Descriptive statistics (ch2-4)\n",
         "\n",
         "Picture in textbook page 120.\n",
+        "\n",
+        "[Link to textbook resources](https://www.cengage.com/cgi-wadsworth/course_products_wp.pl?fid=M20b&product_isbn_issn=9781473768260&token=9AA9144A5DAADFD6281CB3D8D3BF1D039B3CAA6803DCA14B18A67173F7C7BE3460DEC95F8E7B896E6C374E06962702EA3E0D4F739F9E09A0ADEDC3F88A58BC79E0D40B4051C09EFF&template=EMEA)\n",
         "\n",
         "## Example: Cardio Good Fitness Case Study\n",
         "\n",
