--- a/Statistics_refresher_aqm_2023_ex.ipynb
+++ b/Statistics_refresher_aqm_2023_ex.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBJiiAaIAlht/4domMU7ae",
+      "authorship_tag": "ABX9TyNwjh/Oqr61IbxhhHFBAxGZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2631,26 +2631,27 @@
         "xbar = 172\n",
         "z = stats.norm.isf(q=0.025)\n",
         "\n",
+        "# the solution is right, the output formatting needed to be fixed to more digits after the dot\n",
         "LCI = xbar - z * se\n",
-        "print(\"LCI %4.2f\" %LCI)\n",
+        "print(\"LCI %4.5f\" %LCI)\n",
         "UCI = xbar + z * se\n",
-        "print(\"UCI %4.2f\" %UCI)"
+        "print(\"UCI %4.5f\" %UCI)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pb-ZqomqYeIq",
-        "outputId": "8926f88b-394b-451e-a3a3-f43fdd163952"
+        "outputId": "31b6312f-0720-43dc-878b-d80628919c2a"
       },
-      "execution_count": 48,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "LCI 172.00\n",
-            "UCI 172.00\n"
+            "LCI 171.99608\n",
+            "UCI 172.00392\n"
           ]
         }
       ]
